-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 24
-
Component/s: tools
-
b18
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8346698 | 21.0.7 | Matthias Baesken | P4 | Resolved | Fixed | b01 |
It has been discussed that checking the return value of pthread_create should be done.
See the discussion here https://github.com/openjdk/jdk/pull/20812 about the splashscreen coding .
See the discussion here https://github.com/openjdk/jdk/pull/20812 about the splashscreen coding .
- backported by
-
JDK-8346698 Clean up return code handling for pthread calls in library coding
-
- Resolved
-
- relates to
-
JDK-8341135 Incorrect format string after JDK-8339475
-
- Resolved
-
-
JDK-8292016 Cleanup legacy error reporting in the JDK outside of HotSpot
-
- Closed
-
- links to
-
Commit(master)
openjdk/jdk21u-dev/a01f0244
-
Commit(master)
openjdk/jdk/2a2ecc99
-
Review(master)
openjdk/jdk21u-dev/1247
-
Review(master)
openjdk/jdk23u/184
-
Review(master)
openjdk/jdk/21182
(3 links to)