8339475: Clean up return code handling for pthread calls in library coding 8341135: Incorrect format string after JDK-8339475

Reviewed-by: mdoerr
Backport-of: 2a2ecc994e02049d6d84f083b8e92a51368577bf